@@ -3,30 +3,31 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath("net.serenity-bdd:serenity-gradle-plugin:2.3.31")
+    classpath("net.serenity-bdd:serenity-gradle-plugin:2.4.24")
   }
 }
 
 plugins {
   id 'application'
   id 'checkstyle'
-  id 'uk.gov.hmcts.java' version '0.12.0'
+  id 'uk.gov.hmcts.java' version '0.12.18'
   id 'pmd'
   id 'jacoco'
-  id 'io.spring.dependency-management' version '1.0.10.RELEASE'
-  id 'org.springframework.boot' version '2.4.3'
-  id 'org.owasp.dependencycheck' version '6.0.3'
-  id 'com.github.ben-manes.versions' version '0.36.0'
+  id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+  id 'org.springframework.boot' version '2.5.9'
+  id 'org.owasp.dependencycheck' version '6.4.1.1'
+  id 'com.github.ben-manes.versions' version '0.42.0'
   id "info.solidsoft.pitest" version '1.6.0'
   id 'org.sonarqube' version '3.1.1'
-  id 'com.gorylenko.gradle-git-properties' version '2.2.2'
+  id 'com.gorylenko.gradle-git-properties' version '2.4.0'
   id "io.freefair.lombok" version "5.3.0"
-  id 'org.flywaydb.flyway' version '7.5.0'
+  id 'org.flywaydb.flyway' version '7.15.0'
 }
 
 apply plugin: "com.gorylenko.gradle-git-properties"
 apply plugin: 'net.serenity-bdd.aggregator'
 apply plugin: "info.solidsoft.pitest"
+apply plugin: "org.owasp.dependencycheck"
 
 group = 'uk.gov.hmcts.reform'
 version = '0.1.0'
@@ -83,9 +84,9 @@ sourceSets {
 }
 
 configurations {
-  integrationTestCompile.extendsFrom testCompile
+  integrationTestImplementation.extendsFrom testImplementation
   integrationTestRuntime.extendsFrom testRuntime
-  functionalTestCompile.extendsFrom testCompile
+  functionalTestImplementation.extendsFrom testImplementation
   functionalTestRuntime.extendsFrom testRuntime
 }
 
@@ -122,11 +123,17 @@ task smoke(type: Test) {
   classpath = sourceSets.smokeTest.runtimeClasspath
 }
 
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
 checkstyle {
   maxWarnings = 0
   toolVersion = '8.29'
   // need to set configDir to rootDir otherwise submodule will use submodule/config/checkstyle
-  configDir = new File(rootDir, 'config/checkstyle')
+  configDirectory = new File(rootDir, 'config/checkstyle')
 }
 
 pmd {
@@ -217,8 +224,8 @@ dependencyCheck {
 dependencyManagement {
   dependencies {
     // CVE-2021-21290
-    dependency group: 'com.azure', name: 'azure-core-http-netty', version: '1.8.0'
-    dependencySet(group: 'io.netty', version: '4.1.61.Final') {
+    dependency group: 'com.azure', name: 'azure-core-http-netty', version: '1.11.7'
+    dependencySet(group: 'io.netty', version: '4.1.74.Final') {
       entry 'netty-buffer'
       entry 'netty-codec'
       entry 'netty-codec-http'
@@ -236,7 +243,7 @@ dependencyManagement {
       entry 'netty-resolver-dns'
       entry 'netty-resolver-dns-native-macos'
     }
-    dependency group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.67'
+    dependency group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.69'
     // CVE-2018-10237 - Unbounded memory allocation
     // CVE-2020-8908 - Temp directory creation vulnerability
     dependencySet(group: 'com.google.guava', version: '30.1-jre') {
@@ -250,16 +257,29 @@ dependencyManagement {
       entry 'groovy-xml'
     }
     // CVE-2021-29425
-    dependency group: 'commons-io', name: 'commons-io', version: '2.8.0'
+    dependency group: 'commons-io', name: 'commons-io', version: '2.11.0'
+
+    dependencySet(group: 'org.springframework.cloud', version: '3.0.5') {
+      entry 'spring-cloud-starter-openfeign'
+      entry 'spring-cloud-openfeign-core'
+    }
+
+    dependencySet(group: 'org.springframework.security', version: '5.6.1') {
+      entry 'spring-security-core'
+      entry 'spring-security-test'
+    }
+  }
+  imports {
+    mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2020.0.3'
   }
 }
 
 repositories {
   mavenLocal()
-  jcenter()
   mavenCentral()
+  jcenter()
   maven {
-    url "https://dl.bintray.com/hmcts/hmcts-maven"
+    url 'https://jitpack.io'
   }
 }
 
@@ -269,27 +289,29 @@ def versions = [
   reformLogging       : '5.1.1',
   springBoot          : springBoot.class.package.implementationVersion,
   springfoxSwagger    : '3.0.0',
+  springfoxSwaggerui  : '2.9.2',
   restAssured         : '4.2.0',
-  serenity            : '2.3.31',
+  serenity            : '2.4.24',
   lombok              : '1.18.12',
   gradlePitest        : '1.6.0',
   pitest              : '1.6.3',
   sonarPitest         : '0.5',
-  serviceAuthVersion  : '4.0.0',
-  testcontainers      : '1.15.1'
+  testcontainers      : '1.15.1',
+  springFramework     : '5.3.15',
+  fasterXmlJackson    : '2.13.2'
 ]
 
 configurations.all {
   resolutionStrategy {
     eachDependency { DependencyResolveDetails details ->
       if (details.requested.group in ['org.apache.logging.log4j']) {
-        details.useVersion '2.13.2'
+        details.useVersion '2.17.1'
       }
       if (details.requested.group in ['org.scala-lang']) {
         details.useVersion '2.12.10'
       }
       if (details.requested.group in ['org.apache.tomcat.embed']) {
-        details.useVersion '9.0.43'
+        details.useVersion '9.0.58'
       }
       if (details.requested.group in ['org.hibernate']) {
         details.useVersion '5.4.25.Final'
@@ -307,60 +329,82 @@ dependencies {
     exclude group: 'org.springframework.cloud', module: 'spring-cloud-context'
   }
 
-  compile group: 'org.springframework.boot', name: 'spring-boot-starter-web'
-  compile group: 'org.springframework.boot', name: 'spring-boot-starter-web-services'
-  compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
-  compile group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
-  compile group: 'org.springframework.boot', name: 'spring-boot-starter-json'
-  compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
-  compile group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web-services'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc'
+  testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.6.3'
+
+  implementation group: 'org.springframework', name:'spring-aop', version: versions.springFramework
+  implementation group: 'org.springframework', name:'spring-aspects', version: versions.springFramework
+  implementation group: 'org.springframework', name:'spring-beans', version: versions.springFramework
+  implementation group: 'org.springframework', name:'spring-context', version: versions.springFramework
+  implementation group: 'org.springframework', name:'spring-core', version: versions.springFramework
+  implementation group: 'org.springframework', name:'spring-expression', version: versions.springFramework
+  implementation group: 'org.springframework', name:'spring-jcl', version: versions.springFramework
+  implementation group: 'org.springframework', name:'spring-jdbc', version: versions.springFramework
+  implementation group: 'org.springframework', name:'spring-orm', version: versions.springFramework
+  implementation group: 'org.springframework', name:'spring-oxm', version: versions.springFramework
+  implementation group: 'org.springframework', name:'spring-tx', version: versions.springFramework
+  implementation group: 'org.springframework', name:'spring-web', version: versions.springFramework
+  implementation group: 'org.springframework', name:'spring-webmvc', version: versions.springFramework
+  testImplementation group: 'org.springframework', name: 'spring-test', version: versions.springFramework
 
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
-  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap', version: '3.0.1'
-  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.7.RELEASE'
+  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap'
+  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.10.RELEASE'
+
+  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.0.5'
 
   implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
-  implementation(group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: versions.serviceAuthVersion) {
-    force = true
-  }
+  implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '4.0.3'
 
-  implementation group: 'com.microsoft.azure', name: 'azure-storage', version: '8.6.5'
+  implementation group: 'com.microsoft.azure', name: 'azure-storage', version: '8.6.6'
   implementation group: 'com.azure', name: 'azure-storage-blob', version: '12.10.0'
 
-  implementation group: 'uk.gov.hmcts.reform.pcq', name: 'pcq-commons', version: '1.1.2'
+  implementation group: 'com.github.hmcts', name: 'pcq-commons', version: '1.1.5'
 
-  compile group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version:'0.1.0', withoutSpringCloudContext
+  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.2.1'
+  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: versions.fasterXmlJackson
+  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: versions.fasterXmlJackson
+  implementation group: 'com.fasterxml.jackson', name: 'jackson-bom', version: versions.fasterXmlJackson, ext: 'pom'
 
-  compile group: 'org.springframework.boot', name: 'spring-boot-configuration-processor'
-  compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.4.3'
-  compile group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+  implementation group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version:'0.1.0', withoutSpringCloudContext
 
-  compile group: 'org.flywaydb', name: 'flyway-core', version: '7.6.0'
-  compile group: 'org.postgresql', name: 'postgresql', version: '42.2.18'
-  compile group: 'io.springfox', name: 'springfox-swagger2', version: versions.springfoxSwagger
+  implementation group: 'org.springframework.boot', name: 'spring-boot-configuration-processor'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security'
+  implementation group: 'org.projectlombok', name: 'lombok', version: versions.lombok
 
-  compile group: 'uk.gov.hmcts.reform', name: 'logging', version: versions.reformLogging
-  compile group: 'uk.gov.hmcts.reform', name: 'logging-appinsights', version: versions.reformLogging
+  implementation group: 'org.flywaydb', name: 'flyway-core', version: '7.15.0'
+  implementation group: 'org.postgresql', name: 'postgresql', version: '42.3.3'
+  implementation group: 'io.springfox', name: 'springfox-swagger2', version: versions.springfoxSwagger
+  implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: versions.springfoxSwaggerui
 
-  compile group: "com.networknt", name: "json-schema-validator", version: "1.0.49"
-  compile group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+  implementation group: 'uk.gov.hmcts.reform', name: 'logging', version: versions.reformLogging
+  implementation group: 'uk.gov.hmcts.reform', name: 'logging-appinsights', version: versions.reformLogging
 
-  compile group: "io.jsonwebtoken", name: "jjwt", version: "0.9.1"
-  compile group: "com.gilecode.yagson", name:"j9-reflection-utils", version:"1.0"
+  implementation group: "com.networknt", name: "json-schema-validator", version: "1.0.49"
+  implementation group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+
+  implementation group: "io.jsonwebtoken", name: "jjwt", version: "0.9.1"
+  implementation group: "com.gilecode.yagson", name:"j9-reflection-utils", version:"1.0"
 
   testImplementation group: 'org.junit.platform', name: 'junit-platform-commons', version: versions.junitPlatform
   testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: versions.junit
-  testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: versions.junit
+  testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: versions.junit
   testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: versions.junit
 
-  testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
-  testCompile group: 'org.springframework.security', name: 'spring-security-test'
+  //testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
+  //testImplementation group: 'org.springframework.security', name: 'spring-security-test'
 
-  testCompile group: 'com.github.tomakehurst', name: 'wiremock', version: '2.19.0'
+  testImplementation group: 'com.github.tomakehurst', name: 'wiremock', version: '2.19.0'
 
-  testCompile group: 'org.pitest', name: 'pitest', version: versions.pitest
-  testCompile group: 'info.solidsoft.gradle.pitest', name: 'gradle-pitest-plugin', version: versions.gradlePitest
-  testCompile 'org.codehaus.sonar-plugins:sonar-pitest-plugin:0.5'
+  testImplementation group: 'org.pitest', name: 'pitest', version: versions.pitest
+  testImplementation group: 'info.solidsoft.gradle.pitest', name: 'gradle-pitest-plugin', version: versions.gradlePitest
+  testImplementation 'org.codehaus.sonar-plugins:sonar-pitest-plugin:0.5'
 
   testImplementation group: 'net.serenity-bdd', name: 'serenity-core', version: versions.serenity
   testImplementation group: 'net.serenity-bdd', name: 'serenity-junit', version: versions.serenity
@@ -372,17 +416,21 @@ dependencies {
   testImplementation group: 'io.rest-assured', name: 'json-path', version: versions.restAssured
   testImplementation group: 'io.rest-assured', name: 'xml-path', version: versions.restAssured
 
-  testCompile group: 'org.testcontainers', name: 'testcontainers', version: versions.testcontainers
-  testCompile group: 'org.testcontainers', name: 'postgresql', version: versions.testcontainers
+  testImplementation group: 'org.testcontainers', name: 'testcontainers', version: versions.testcontainers
+  testImplementation group: 'org.testcontainers', name: 'postgresql', version: versions.testcontainers
 
-  integrationTestCompile group: 'org.testcontainers', name: 'testcontainers', version: versions.testcontainers
-  integrationTestCompile group: 'org.testcontainers', name: 'postgresql', version: versions.testcontainers
+  testImplementation 'com.github.hmcts:fortify-client:1.2.1:all'
 
-  integrationTestCompile sourceSets.main.runtimeClasspath
-  integrationTestCompile sourceSets.test.runtimeClasspath
 
-  functionalTestCompile sourceSets.main.runtimeClasspath
-  functionalTestCompile sourceSets.test.runtimeClasspath
+
+  integrationTestImplementation group: 'org.testcontainers', name: 'testcontainers', version: versions.testcontainers
+  integrationTestImplementation group: 'org.testcontainers', name: 'postgresql', version: versions.testcontainers
+
+  integrationTestImplementation sourceSets.main.runtimeClasspath
+  integrationTestImplementation sourceSets.test.runtimeClasspath
+
+  functionalTestImplementation sourceSets.main.runtimeClasspath
+  functionalTestImplementation sourceSets.test.runtimeClasspath
   functionalTestCompileOnly group: 'org.projectlombok', name: 'lombok', version: versions.lombok
   functionalTestAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
 
@@ -391,8 +439,8 @@ dependencies {
   smokeTestImplementation group: 'io.rest-assured', name: 'json-path', version: versions.restAssured
   smokeTestImplementation group: 'io.rest-assured', name: 'xml-path', version: versions.restAssured
 
-  smokeTestCompile sourceSets.main.runtimeClasspath
-  smokeTestCompile sourceSets.test.runtimeClasspath
+  smokeTestImplementation sourceSets.main.runtimeClasspath
+  smokeTestImplementation sourceSets.test.runtimeClasspath
 }
 
 test {
@@ -425,4 +473,24 @@ bootJar {
   manifest {
     attributes('Implementation-Version': project.version.toString())
   }
+}
+
+rootProject.tasks.named("processTestResources") {
+  duplicatesStrategy = 'include'
+}
+
+rootProject.tasks.named("processFunctionalTestResources") {
+  duplicatesStrategy = 'include'
+}
+
+rootProject.tasks.named("processIntegrationTestResources") {
+  duplicatesStrategy = 'include'
+}
+
+rootProject.tasks.named("processSmokeTestResources") {
+  duplicatesStrategy = 'include'
+}
+
+rootProject.tasks.named("processResources") {
+  dependsOn("generateGitProperties")
 }
